# 01219461-65-big-data

./: .gitignore  pyproject.toml
hive-vs-pig/: hive-vs-pig.ipynb  pig_q2_1.pig  pig_q2_2.pig  pig_q2_3.pig
hive-vs-pig/data/: create_hospital_db_hive.sql
mapreduce-knn/: KNN_MapReduce_Performance_Test.ipynb  KnnPattern.java  run_knn_tests.py
mapreduce-knn/.ipynb_checkpoints/: KNN_MapReduce_Performance_Test-checkpoint.ipynb
mapreduce-knn/data/: knn_6_1000.csv  knn_6_10000.csv
mapreduce-knn/results/: knnParams.txt  knn_results_20260101_152622.csv  knn_results_20260101_152622.json  knn_results_latest.csv  knn_results_latest.json
