# KNN MapReduce Performance Testing Project
# Dependencies managed by uv (https://github.com/astral-sh/uv)
#
# To add a new package:
#   uv pip install <package-name>
#
# To sync with this file:
#   uv pip install jupyter notebook ipykernel pandas matplotlib seaborn numpy

[project]
name = "mapreduce-knn"
version = "0.1.0"
description = "KNN MapReduce Performance Testing with Jupyter"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.29.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "numpy>=1.26.0",
]
